--- a/login/home.html
+++ b/login/home.html
@@ -11,7 +11,7 @@
         <h1>
             login
         </h1>
-        <form>
+        <form id="loginForm">
             <div class="input-group">
                 <label for="username">username</label>
                 <input type="text" id="username" name="username" required>
